--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "vue": "^2.6.14",
+    "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
